Fixed section alignment when no or one section exists.

--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -74,7 +74,7 @@ $selected-poster-height: 150px;
     left:0;
     top:372px;
     background-color:black;
-    width:390px;
+    width:410px;
     height:1px;
     z-index:-10;
 }
