--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,7 +4,7 @@ $bg-transition-time: 100ms;
 * {
     font-family: sans-serif;
 }
-body {
+html, body {
     width:1280px;
     height:720px;
     overflow:hidden;
